fix: refactor code with pools in sanchonet